force-app/main/default/objects/Account/fields/Account_Logo__c.field-meta.xml
<CustomField>
    <fullName>Account_Logo__c</fullName>
    <description>CC: Used to display static resource linked from Logo__c in b2b commerce portal.</description>
    <formula>IMAGE( Logo__c , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Logo</label>
    <type>Text</type>
</CustomField>