force-app/main/default/objects/Account/fields/Do_not_display_logo__c.field-meta.xml
<CustomField>
    <fullName>Do_not_display_logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC - do not display a logo for this account in the b2b commerce webstore</description>
    <inlineHelpText>Check here to choose not to display a logo for this account in the b2b commerce webstore</inlineHelpText>
    <label>Do not display logo</label>
    <type>Checkbox</type>
</CustomField>