force-app/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>CC: url to static resource containing logo desired to use for this account.</description>
    <label>Logo</label>
    <type>Url</type>
</CustomField>